--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "simplecv.doc.tar.xz": 110b52b8622523ed2b3049b9c76fd2db1d0b479a
-  "simplecv.source.tar.xz": d0decd86c2c999bd7c8cef83e4507c7ef8eb1159
-  "simplecv.tar.xz": 2aa58aa0159be9f8287b1dd822e4cbe532fb53ec
+  simplecv.doc.tar.xz: ca47835581aaf7d363707b9ed6c656386dfba288
+  simplecv.source.tar.xz: 1a40c1e0d3ff4300b922e8825fbe88fc7f802522
+  simplecv.tar.xz: a0007fdaa1fcbaa72e7ef6fe74ea6471824a44af
